handling the mobile screen

--- a/css/style.css
+++ b/css/style.css
@@ -33,16 +33,10 @@ a{
   padding-right: 50px;
 }
 /* media quieries */
-/* Small */
-@media (min-width: 768px) {
-  .container {
-    width: 750px;
-  }
-}
-/* Medium */
-@media (min-width: 992px) {
-  .container {
-    width: 970px;
+/* Small & Medium */
+@media (max-width: 1199px) {
+  .container{
+    width: 100%;
   }
 }
 /* Large */
@@ -111,9 +105,6 @@ header nav ul li a:hover{
 /* media quieries for header */
 /* Mobile */
 @media (max-width: 767px) {
-  .container {
-    width: 95%;
-  }
   header .logo a{
     font-size: 20px;
   }
@@ -134,9 +125,6 @@ header nav ul li a:hover{
 }
 /* Small and medium */
 @media (min-width: 768px) and (max-width: 1199px) {
-  .container {
-    width: 95%;
-  }
   header .logo a{
     font-size: 20px;
   }
@@ -821,7 +809,6 @@ width: 100%;
 @media (max-width: 1199px) {
   .submit-vac .container .table{
     overflow-x: auto;
-    margin-left: 50px;
   }
 }
 /* end of submitted vacation */
